--- a/content/resources/res-21hs21-001.md
+++ b/content/resources/res-21hs21-001.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/res-21h-001-visualizing-the-birth-of-modern-tokyo-spring-2021/65c9085de7b8871448bb9c1d684e29b3_res-21hs21-001.jpg
+file: /media/courses/res-21h-001-visualizing-the-birth-of-modern-tokyo-spring-2021/65c9085de7b8871448bb9c1d684e29b3_res-21hs21-001.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Koizumi Kishio's \"Eitai Bridge and Kiyosu Bridge\" from the series 100\
@@ -9,6 +9,8 @@ image_metadata:
     \ / public domain)."
   credit: ''
   image-alt: A scene of a bridge at night
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: res-21hs21-001.jpg
 uid: 65c9085d-e7b8-8714-48bb-9c1d684e29b3
