--- a/content/resources/res-21hs21-001.md
+++ b/content/resources/res-21hs21-001.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: A scene of a bridge at night
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: res-21hs21-001.jpg
