Sync all content

--- a/content/resources/res-21hs21-001-th.md
+++ b/content/resources/res-21hs21-001-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/res-21h-001-visualizing-the-birth-of-modern-tokyo-spring-2021/37f98acfe49f65404aeb1157f5e430fb_res-21hs21-001-th.jpg
+file_size: 4414
 file_type: image/jpeg
 image_metadata:
   caption: "Koizumi Kishio's \"Eitai Bridge and Kiyosu Bridge\" from the series 100\
