--- a/content/resources/res-21hs21-001.md
+++ b/content/resources/res-21hs21-001.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/res-21h-001-visualizing-the-birth-of-modern-tokyo-spring-2021/65c9085de7b8871448bb9c1d684e29b3_res-21hs21-001.jpg
+file_size: 24061
 file_type: image/jpeg
 image_metadata:
   caption: "Koizumi Kishio's \"Eitai Bridge and Kiyosu Bridge\" from the series 100\
